# mi-biografia

./: ProjectHome.md
datos/fuentes/fuentesRss/: juventudrebelde.cu.ciencia_tecnica.rss  juventudrebelde.cu.cultura.rss  juventudrebelde.cu.generales.rss  juventudrebelde.cu.rss
datos/fuentes/fuentesTwt/: tweeterLogger.biografia
src/: Makefile  domain_AutorId.cpp  domain_AutorId.h  domain_AutorOcurrencia.h  domain_FechaOcurrencia.h  domain_FechaReferencias.h  domain_IdentificadorId.h  domain_IdentificadorOcurrencia.cpp  domain_IdentificadorReferencias.h  domain_RTTocurrencia.h  domain_RTTreferencia.h  domain_RegistroGenerico.h  domain_TituloId.cpp  domain_TituloId.h  domain_TituloReferencias.cpp  fisica_DirHandler.h  fisica_SerialBuffer.h  interfaz_Menu.cpp  logica_ArbolBmasNodoHoja.h  logica_ArbolBmasNodoInterno.h  logica_BlockTable.h  logica_Buscador.cpp  logica_Buscador.h  logica_Comparable.h  logica_Descargador.cpp  logica_Descargador.h  logica_FileHandler.cpp  logica_Indexer.cpp  logica_Indexer.h  logica_IndiceAutor.cpp  logica_IndiceAutor.h  logica_IndiceFecha.cpp  logica_IndiceFecha.h  logica_IndiceIdentificador.cpp  logica_IndiceIdentificador.h  logica_IndiceIdentificadores.cpp  logica_IndiceTitulo.cpp  logica_IndiceTitulo.h  logica_RTTgenerator.cpp  logica_SortExterno.h  (+12 more)
trunk/: CMakeLists.txt  TP1.cbp  TP1.layout  runUnitTests.sh
trunk/codigo/: Makefile  domain_AutorOcurrencia.cpp  domain_TituloOcurrencia.cpp  domain_TituloOcurrencia.h  domain_TituloReferencias.h  fisica_ArchivoBloques.h  fisica_Block.h  fisica_DirHandler.cpp  fisica_SerialBuffer.cpp  fisica_VarBuffer.cpp  fisica_VarBuffer.h  interfaz_main.cpp  logica_ArbolBmas.h  logica_ArbolBmasNodo.h  logica_ArbolBmasNodoInterno.h  logica_FileHandler.cpp  logica_HashExtensible.cpp  logica_HashExtensible.h  logica_Indexer.h  logica_IndiceAutor.h  logica_IndiceIdentificadores.h  logica_Reg.h  logica_Utils.cpp  logica_Utils.h  parametros.conf  runtimeConfig.h
trunk/codigo/fuentesTwt/: tweeterLogger.nacho
trunk/codigo/mi-biografia/: mi-biografia.cbp
trunk/datos/fuentes/fuentesRss/: juventudrebelde.cu.cultura.rss
trunk/datos/fuentes/fuentesTwt/: tweeterLogger.biografia
trunk/docs/: compilar.txt
trunk/src/: BioConfig.h.in  CMakeLists.txt  arbolB.cpp  arbolB.h  arbolBMas.cpp  arbolBMas.h  arbolBMasNodo.cpp  arbolBMasNodo.h  archivo.cpp  archivo.h  archivoBloques.cpp  archivoBloques.h  archivoId.cpp  archivoId.h  bio.cpp  bloque.cpp  bloque.h  buffer.cpp  buffer.h  domain_AutorId.cpp  domain_AutorId.h  domain_AutorReferencias.cpp  domain_AutorReferencias.h  domain_FechaOcurrencia.cpp  domain_FechaReferencias.cpp  domain_Fechaid.cpp  domain_Fechaid.h  domain_IdentificadorId.cpp  domain_IdentificadorId.h  domain_IdentificadorOcurrencia.h  domain_IdentificadorReferencias.cpp  domain_IdentificadorReferencias.h  domain_RTTocurrencia.cpp  domain_RTTreferencia.cpp  domain_TituloId.cpp  fisica_ArchivoBloques.cpp  fisica_DirHandler.cpp  fisica_DirHandler.h  fisica_VarBuffer.cpp  hashExt.cpp  (+63 more)
trunk/test/: CMakeLists.txt  arbolBMasNodoTest.cpp  arbolBMasTest.cpp  arbolBTest.cpp  archivoBloquesTest.cpp  archivoIdTest.cpp  archivoTest.cpp  bloqueTest.cpp  bufferTest.cpp  hashExtTest.cpp  indiceAutorTest.cpp  indiceFechaTest.cpp  indiceTituloTest.cpp  parserRSSTest.cpp  parserTWTTest.cpp  registroFijoTest.cpp  registroRSSTest.cpp  registroTWTTest.cpp  registroVarTest.cpp
trunk/test/gtest/: Makefile  config.status  libtool
trunk/test/gtest/samples/.deps/: sample2.Plo  sample4.Plo
trunk/test/gtest/src/.deps/: gtest-all.Plo  gtest_main.Plo
